[gd_scene format=3 uid="uid://dumuukb74f7pi"]

[ext_resource type="Script" uid="uid://2sdyir05bje7" path="res://UI/hud.gd" id="1_ijstf"]
[ext_resource type="Texture2D" uid="uid://da0fxodvc6w8t" path="res://Image/Coins.png" id="2_4n7mi"]

[node name="HUD" type="CanvasLayer" unique_id=1642666173 groups=["hud"]]
script = ExtResource("1_ijstf")

[node name="MoneyContainer" type="HBoxContainer" parent="." unique_id=1972613558]
offset_right = 40.0
offset_bottom = 40.0

[node name="MoneyIcon" type="TextureRect" parent="MoneyContainer" unique_id=919611146]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = ExtResource("2_4n7mi")
expand_mode = 1

[node name="MoneyLabel" type="Label" parent="MoneyContainer" unique_id=1759955967]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="WaveContainer" type="HBoxContainer" parent="." unique_id=1504138760]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="WaveLabel" type="Label" parent="WaveContainer" unique_id=126532770]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Wave 1"

[node name="RoomClearLabel" type="Label" parent="." unique_id=166246189]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
